Updated content and dates and venues

--- a/assets/themes/custom/index.html
+++ b/assets/themes/custom/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Amor - HTML Wedding Template</title>
+	<title>Scientist Weds Geek - Niharika and Ritik's Story</title>
 	
 	<!-- The Meta --> 
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <meta name="description" content="Amor - HTML Wedding Template" />
-    <meta name="keywords" content="jquery, css3, html5, animation, mobile, responsive, preview" />
-    <meta name="author" content="Doriana" />
+    <meta name="description" content="Scientist Weds Geek - Niharika and Ritik's Story" />
+    <meta name="keywords" content="Niharika, Thakkar, Ritik, Khatwani, Wedding, Marriage, Indore" />
+    <meta name="author" content="Ritik" />
 	
     <link rel="shortcut icon" href="images/favicon.ico" />
 	
@@ -97,10 +97,10 @@
 		</ul>
 		<div class="container">
 			<div class="header animated tada">
-				<h1>Jason & Sarah</h1>
+				<h1>Niharika & Ritik</h1>
 				<h4>ARE GETTING MARRIED</h4>
 				<hr />
-				<h4>Sunday, 24th of May 2015 at “La Pirati”, Vama Veche</h4>
+				<h4>Thursday, 26th of February 2015 at Sayaji Hotel, Indore</h4>
 				<div class="header-button">
 					<a href="#guestbook">CELEBRATE WITH US!</a>
 				</div>
@@ -115,7 +115,7 @@
 	<div id="story">
 	<div class="story-content">
 		<div class="container">
-			<h3>Him & Her. Their Happy Story!</h3>
+			<h3>Scientist & Geek. Their Happy Story!</h3>
 			<div class="heart content-style"></div>
 		
 			<div class="row">
@@ -126,7 +126,7 @@
 							<img src="images/her.jpg" alt="" />
 						</div>
 					</div>
-						<h4 class="bride-name">Sarah Jones</h4>
+						<h4 class="bride-name">Niharika Thakkar</h4>
 						<h3 class="bride-description">Bride</h3>
 							<div class="social">
 								<a href="#"><i class="fa-facebook"></i></a>
@@ -149,7 +149,7 @@
 							<img src="images/him.jpg" alt="" />
 						</div>
 					</div>
-						<h4 class="groom-name">Jason Smith</h4>
+						<h4 class="groom-name">Ritik Khatwani</h4>
 						<h3 class="groom-description">Groom</h3>
 							<div class="social">
 								<a href="#"><i class="fa-facebook"></i></a>
@@ -208,7 +208,7 @@
 						<div class="base">
 							<img src="images/her-mother.jpg" alt="" />
 						</div>
-						<div class="parents-text-women"><h4>Ana Jones</h4></div>
+						<div class="parents-text-women"><h4>Vipula Thakkar</h4></div>
 						</div>
 					</div><!--end col-md-2-->
 					<div class="col-md-2">
@@ -217,7 +217,7 @@
 						<div class="base">
 							<img src="images/her-father.jpg" alt="" />
 						</div>
-						<div class="parents-text-men"><h4>Paul Jones</h4></div>
+						<div class="parents-text-men"><h4>Himanshu Thakkar</h4></div>
 						</div>
 					</div><!--end col-md-2-->
 					<div class="col-md-4">
@@ -229,7 +229,7 @@
 						<div class="base">
 							<img src="images/his-mother.jpg" alt="" />
 						</div>
-						<div class="parents-text-women"><h4>Lara Smith</h4></div>
+						<div class="parents-text-women"><h4>Karuna Khatwani</h4></div>
 						</div>
 					</div><!--end col-md-2-->
 					<div class="col-md-2">
@@ -238,7 +238,7 @@
 						<div class="base">
 							<img src="images/his-father.jpg" alt="" />
 						</div>
-						<div class="parents-text-men"><h4>George Smith</h4></div>
+						<div class="parents-text-men"><h4>Shyam Khatwani</h4></div>
 						</div>
 					</div><!--end col-md-2-->
 				</div><!-- end row -->
@@ -252,7 +252,7 @@
 				
 				<div class="row">
 					<div class="col-md-4">
-						<div class="godfathers-text-women"><h4>Tina Snow</h4>
+						<div class="godfathers-text-women"><h4>Sameer Thakkar</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor lectus eu congue fringilla. Vivamus malesuada dictum lorem.</p></div>
 					</div><!--end col-md-4-->
 					<div class="col-md-2">
@@ -268,7 +268,7 @@
 						</div>
 					</div><!--end col-md-2-->
 					<div class="col-md-4">
-						<div class="godfathers-text-men"><h4>Derek Snow</h4>
+						<div class="godfathers-text-men"><h4>Pathik Khatwani</h4>
 						<p>Vivamus in sodales lorem. Nunc vel dolor at diam viverra dignissim. Cras a est eget nulla porttitor hendrerit. Nunc eget sapien.</p></div>
 					</div><!--end col-md-4-->
 				</div><!--end row-->
@@ -286,22 +286,20 @@
 					</div><!--end col-md-3-->
 					<div class="col-md-3 maids">
 						<div class="bridesmaids">
-						<h4>Jenny Doe</h4>
-						<h4>Carla Croft</h4>
-						<h4>Andrea James</h4>
-						<h4>Tina Mosk</h4>
-						<h4>Jessie Silver</h4>
-						<h4>Vivian Stone</h4>
+						<h4>Anshika Agarwal</h4>
+						<h4>Prerna Koppiker</h4>
+						<h4>Shubhangni Seth</h4>
+						<h4>Radiancy Lyngdoh</h4>
+						<h4>Shalini Talreja</h4>
 						</div>
 					</div><!--end col-md-3-->
 					<div class="col-md-3 maids">
 						<div class="groomsmen">
-						<h4>Brian Smith</h4>
-						<h4>Alex Dean</h4>
-						<h4>Karl Mann</h4>
-						<h4>Robert Fox</h4>
-						<h4>Steve Jones</h4>
-						<h4>Daryl Gold</h4>
+						<h4>Jeston Silveira</h4>
+						<h4>Pallav Kuiya</h4>
+						<h4>Aman Dua</h4>
+						<h4>Rahul Jagtap</h4>
+						<h4>Ankit Jariya</h4>
 						</div>
 					</div><!--end col-md-3-->
 					<div class="col-md-3">
@@ -323,7 +321,7 @@
 	<div id="events">
 		<div class="container">
 			<div class="events">
-				<h2>You are welcome to attend our Wedding Ceremony and our Wedding Party<br /> on 24th of May at "La Pirati", Vama Veche!</h2>
+				<h2>You are welcome to attend our Wedding Ceremony and our Wedding Party<br /> on 26th of February at Amber Garden, Indore!</h2>
 				<div class="events-button">
 					<a href="#guestbook">RSVP here</a>
 				</div>
@@ -345,17 +343,17 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="ceremony-data">
-						<h4>Date:</h4> <p>24th of May 2015</p>
+						<h4>Date:</h4> <p>26th of February 2015</p>
 						</div>
 					</div><!--end col-md-4-->
 					<div class="col-md-4">
 						<div class="ceremony-data">
-						<h4>Time:</h4> <p>4:00 in the afternoon</p>
+						<h4>Time:</h4> <p>11:00 in the morning</p>
 						</div>
 					</div><!--end col-md-4-->
 					<div class="col-md-4">
 						<div class="ceremony-data">
-						<h4>Location:</h4> <p>Church "St. Patrick", Vama Veche</p>
+						<h4>Location:</h4> <p>Mahal, Sayaji Hotel, Indore</p>
 						</div>
 					</div><!--end col-md-4-->
 				</div><!--end row-->
@@ -387,7 +385,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="party-data">
-						<h4>Date:</h4> <p>24th of May 2015</p>
+						<h4>Date:</h4> <p>26th of February 2015</p>
 						</div>
 					</div><!--end col-md-4-->
 					<div class="col-md-4">
@@ -397,7 +395,7 @@
 					</div><!--end col-md-4-->
 					<div class="col-md-4">
 						<div class="party-data">
-						<h4>Location:</h4> <p>Restaurant "La Pirati", Vama Veche</p>
+						<h4>Location:</h4> <p>Amber Garden, Indore</p>
 						</div>
 					</div><!--end col-md-4-->
 				</div><!--end row-->
@@ -426,9 +424,9 @@
 						<div class="party-text">
 							<p>Utentis laoreet tellus ut nisl porta, nec lobortis leo rutrum. Phasellus varius sapien eget sapien vulputate, vitae aliquet urna commodo. Etiam euismod ipsum vel erat facilisis posuere. Phasellus iaculis felis vel facilisis pretium.</p>
 							<div class="location-data">
-								<h4>Restaurant "La Pirati"</h4>
-								<p>Sesame Street No.69<br />
-									 450321, Vama Veche</p>
+								<h4>Amber Garden</h4>
+								<p>Bypass Rd, Near Best Price, Hare Krishna Vihar<br />
+									 452010, Indore</p>
 							</div>
 						</div>
 					</div><!--end col-md-6-->
@@ -625,7 +623,7 @@
 		<div class="container">
 			<div class="rsvp-text">
 				<h2>Are you attending?</h2>
-				<p>Please confirm your presence to the event until the 1st of May 2015. Thank you!</p>
+				<p>Please confirm your presence to the event until the 1st of February 2015. Thank you!</p>
 			</div>
 		</div><!--end container-->
 	</div><!--end #rsvp-->
@@ -781,7 +779,7 @@ $(document).ready(function() {
 $(document).ready(function(){
        "use strict";
 		$("#countdown").countdown({
-			date: "24 may 2015 09:00:00", // changes the launch date
+			date: "26 february 2015 11:00:00", // changes the launch date
 			format: "on"
 	},
 			
