Updated map to amber garden

--- a/assets/themes/custom/index.html
+++ b/assets/themes/custom/index.html
@@ -252,7 +252,7 @@
 				
 				<div class="row">
 					<div class="col-md-4">
-						<div class="godfathers-text-women"><h4>Sameer Thakkar</h4>
+						<div class="godfathers-text-men"><h4>Sameer Thakkar</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor lectus eu congue fringilla. Vivamus malesuada dictum lorem.</p></div>
 					</div><!--end col-md-4-->
 					<div class="col-md-2">
@@ -905,7 +905,7 @@ window.onload = function () {
 	}
 ];
 
-var myLatlng = new google.maps.LatLng(46.7697715,23.5896877,17);
+var myLatlng = new google.maps.LatLng(22.751223,75.934313,15);
 
 var options = {
 	mapTypeControlOptions: {
@@ -924,7 +924,7 @@ map.mapTypes.set('Styled', styledMapType);
   var marker = new google.maps.Marker({
       position: myLatlng,
       map: map,
-      title: 'Amor'
+      title: 'Amber Garden'
   });
   
 };  
