Updated alt tags

--- a/assets/themes/custom/index.html
+++ b/assets/themes/custom/index.html
@@ -122,7 +122,7 @@
 					<div class="shape">
 						<a href="#" class="overlay hexagon"></a>
 						<div class="base">
-							<img src="images/her.jpg" alt="" />
+							<img src="images/her.jpg" alt="Niharika Thakkar" />
 						</div>
 					</div>
 						<h4 class="bride-name">Niharika Thakkar</h4>
@@ -145,7 +145,7 @@
 					<div class="shape">
 						<a href="#" class="overlay hexagon"></a>
 						<div class="base">
-							<img src="images/him.jpg" alt="" />
+							<img src="images/him.jpg" alt="Ritik Khatwani" />
 						</div>
 					</div>
 						<h4 class="groom-name">Ritik Khatwani</h4>
