--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta name="description" content="Scientist Weds Geek - Niharika and Ritik's Story" />
     <meta name="keywords" content="Niharika, Thakkar, Ritik, Khatwani, Wedding, Marriage, Indore" />
-    <meta name="author" content="Ritik" />
+    <meta name="author" content="https://www.google.com/+RitikKhatwani" />
 	
     <link rel="shortcut icon" href="images/favicon.ico" />
 	
@@ -49,7 +49,7 @@
 
 	<!--NAVIGATION (menu left)-->
 	<div class="container">
-	<div class="header-quote">“Happily ever after is not a fairy tale. It’s a choice.”</div>
+	<div class="header-quote">“Save the Date: February 26, 2014”</div>
 		<ul id="gn-menu" class="gn-menu-main">
 			<li class="gn-trigger">
 				<div class="trigger"><a class="gn-icon gn-icon-menu"><span>Menu</span></a></div>
