Added temp images

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 	<!--HEADER-->
 	<div id="home">
 		<ul id="cbp-bislideshow" class="cbp-bislideshow">
-			<li><img src="images/1.jpg" alt="image01"/></li>
-			<li><img src="images/2.jpg" alt="image02"/></li>
-			<li><img src="images/3.jpg" alt="image03"/></li>
+			<li><img src="images/1.jpg" alt="Niharika and Ritik"/></li>
+<!--			<li><img src="images/2.jpg" alt="Niharika and Ritik"/></li>
+			<li><img src="images/3.jpg" alt="Niharika and Ritik"/></li> -->
 		</ul>
 		<div class="container">
 			<div class="header animated tada">
