Updated home page banner and 404 page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta charset="utf-8">
 
 		<!-- Page Title -->
-		<title>Kevin & Maria Wedding HTML Template</title>
+		<title>Niharika & Ritik's Wedding</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
 		<!-- Favicon -->
@@ -94,10 +94,10 @@
 			</nav>
 
 			<!-- Names -->
-			<div class="names" data-scroll-reveal>Kevin <span>&</span> Maria</div>
+			<div class="names" data-scroll-reveal>Niharika <span>&</span> Ritik</div>
 
 			<!-- Wedding Date -->
-			<div class="wedate">Friday <i>-</i> <strong>December 25</strong> <i>-</i> 2015</div>
+			<div class="wedate">Thursday <i>-</i> <strong>February 26</strong> <i>-</i> 2015</div>
 			
 			<!-- Header Images -->
 			<div class="main-images center-content" data-scroll-reveal="enter bottom, after 0.2s">
@@ -107,25 +107,19 @@
 				</div>
 
 				<div class="images">
-					<div class="image-01">
-						<img src="images/main-01.jpg" alt="" class="round-img">
-					</div>
 					<div class="image-02">
 						<img src="images/main-02.jpg" alt="" class="round-img">
 					</div>
 					<div class="image-04">
 						<img src="images/main-04.jpg" alt="" class="round-img">
 					</div>
-					<div class="image-05">
-						<img src="images/main-05.jpg" alt="" class="round-img">
-					</div>
 				</div>
 			</div>
 			
 			<!-- Countdown -->
-			<div class="countdown countdown-white" data-countdown="2015/12/25"></div>
+			<div class="countdown countdown-white" data-countdown="2015/02/26"></div>
 			<!-- Countdown Mobile -->
-			<div class="countdown-mobile countdown-white" data-countdown-mobile="2015/12/25"></div>
+			<div class="countdown-mobile countdown-white" data-countdown-mobile="2015/02/26"></div>
 		</header>
 		<!-- END HEADER -->
 
@@ -139,12 +133,12 @@
 			<!-- Couple Info -->
 			<div class="center-container clearfix" data-scroll-reveal>
 				<div class="m-06" data-scroll-reveal="enter left, move 60px, over 1.2s, after 0.3s">
-					<h2>Kevin Jackson</h2>
+					<h2>Niharika Thakkar</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel ligula nisi. Vestibulum a magna auctor, tristique sapien et, tempus velit. Proin feugiat dui ac egestas aliquet. In erat arcu, accumsan mollis tincidunt quis, venenatis ut massa. Duis aliquet auctor dui id placerat. Aenean euismod semper ante adipiscing molestie.</p>
 				</div>
 
 				<div class="m-06" data-scroll-reveal="enter right, move 60px, over 1.2s, after 0.3s">
-					<h2>Maria Steward</h2>
+					<h2>Ritik Khatwani</h2>
 					<p>Duis aliquet, libero at lobortis aliquet, risus nunc gravida dolor, ac sollicitudin turpis est et risus. Maecenas eget nunc vitae nibh laoreet sodales vel quis nisi. Pellentesque ligula, lobortis iaculis libero placerat, luctus elementum sem. Curabitur vestibulum risus vel dui lobortis iaculis. Phasellus ut augue id felis vestibulum pulvinar quis in est.</p>
 				</div>
 			</div>
@@ -505,7 +499,7 @@
 		<!-- BEGIN FOOTER -->
 		<footer class="clearfix" data-scroll-reveal>
 			<div class="m-12">
-				<p>Information line • 1-800-9639288, E-mail • info@wedding.tmp</p>
+				<p>Information line • +91-913-045-4832, E-mail • ritikkhatwani@aol.in</p>
 
 				<div class="m-12 soc">
 					<a href="#"><i class="fa fa-twitter fa-mid"></i></a>
@@ -518,7 +512,7 @@
 					<a href="#"><i class="fa fa-dribbble fa-mid"></i></a>
 				</div>
 			
-				<span>All Rights Reserved © 2014 | Kevin & Maria Wedding</span>
+				<span>All Rights Reserved © 2014 | Niharika & Ritik's Wedding</span>
 			</div>
 		</footer>
 		<!-- END FOOTER -->
