Updated home page

--- a/index.html
+++ b/index.html
@@ -57,16 +57,6 @@
 					<li class="sep"></li>
 					<li><a href="#rsvp">RSVP</a></li>
 					<li class="sep"></li>
-					<li><a href="#" class="stay">Pages</a>
-						<ul class="dropdown">
-							<li><a href="index.php">Home Page</a></li>
-							<li><a href="uielements.html">UI Elements</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="guestbook.html">Guest Book</a></li>
-							<li><a href="fontawesome.html">Font Awesome</a></li>
-							<li><a href="404.html">Error 404</a></li>
-						</ul>
-					</li>
 				</ul>
 				
 				<div class="mobile-nav">
@@ -132,32 +122,47 @@
 
 			<!-- Couple Info -->
 			<div class="center-container clearfix" data-scroll-reveal>
-				<div class="m-06" data-scroll-reveal="enter left, move 60px, over 1.2s, after 0.3s">
-					<h2>Niharika Thakkar</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel ligula nisi. Vestibulum a magna auctor, tristique sapien et, tempus velit. Proin feugiat dui ac egestas aliquet. In erat arcu, accumsan mollis tincidunt quis, venenatis ut massa. Duis aliquet auctor dui id placerat. Aenean euismod semper ante adipiscing molestie.</p>
-				</div>
-
-				<div class="m-06" data-scroll-reveal="enter right, move 60px, over 1.2s, after 0.3s">
-					<h2>Ritik Khatwani</h2>
-					<p>Duis aliquet, libero at lobortis aliquet, risus nunc gravida dolor, ac sollicitudin turpis est et risus. Maecenas eget nunc vitae nibh laoreet sodales vel quis nisi. Pellentesque ligula, lobortis iaculis libero placerat, luctus elementum sem. Curabitur vestibulum risus vel dui lobortis iaculis. Phasellus ut augue id felis vestibulum pulvinar quis in est.</p>
+				<div class="m-12" data-scroll-reveal="enter left, move 60px, over 1.2s, after 0.3s">
+					<h2>Our Story</h2>
+					<p>I, Ritik, would probably end up telling you statistics of how likely it is that two childhood friends end up getting married. Niharika
+						on the other hand is more likely to tell you the behavior and why two childhood friends end up getting married. Together we can 
+						paint quite the picture on the subject :) Why am I bringing this up you ask? Well therein lies our story.
+					</p>
+					<p>
+						Niharika and I first met when we were 7-8 year old kids running around in our shorts, splashing water and building sandcastles 
+						on the beaches of Murud. The parents being friends had picked quite the place for some sun and sand and I believe more so 
+						for a break from us kids. Already a child chess prodigy by then, Niharika was in the limelight throughout the trip for 
+						being crowned one of the youngest chess champions and for her Urmila like moves on the songs of Rangeela. Having an advantage of numbers
+						though, the "Boys" left the girls behind and went alone to do cool things like "having a Frooti" (a mango based beverage very popular
+						amongst kids during the early 90s). Being no stranger to being left out thanks to a wonderful elder sibling, 
+						I would conceal and bring a Frooti back for Niharika every once in a while (or at least that's what I thought).
+					</p>
+					<p>
+						Fate crossed our paths again when I finished my engineering and moved to Pune to start my job at Cybage. Niharika was pursuing her MA 
+						in Psychology from Fergusson College at the time and thanks to Orkut (yes, you read that correctly, Orkut) and Gtalk we'd managed to get back in touch 
+						and had decided to meet up when I reached the city. This time there was no need for sports fame, dance moves or mango beverages though. That day onwards, 
+						we kept looking for excuses and ways to bring our lives together to this point here today :)
+					</p>
+					<p>
+						Join us in our celebrations as we begin the rest of our lives together.
+					</p>
 				</div>
 			</div>
 
 			<hr>
-			<h2 data-scroll-reveal>Class aptent taciti sociosqu ad litora torquent per conubia nostra</h2>
 
 			<!-- Carousel Gallery -->
 			<div id="owl-gallery" class="owl-carousel owl-theme" data-scroll-reveal>
-			  <div class="item"><a href="images/gallery/gallery-01.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gthumb-01.jpg" alt=""></a></div>
-			  <div class="item"><a href="images/gallery/gallery-02.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gthumb-02.jpg" alt=""></a></div>
-			  <div class="item"><a href="images/gallery/gallery-03.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gthumb-03.jpg" alt=""></a></div>
-			  <div class="item"><a href="images/gallery/gallery-04.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gthumb-04.jpg" alt=""></a></div>
-			  <div class="item"><a href="images/gallery/gallery-05.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gthumb-05.jpg" alt=""></a></div>
-			  <div class="item"><a href="images/gallery/gallery-06.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gthumb-06.jpg" alt=""></a></div>
-			  <div class="item"><a href="images/gallery/gallery-07.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gthumb-07.jpg" alt=""></a></div>
-			  <div class="item"><a href="images/gallery/gallery-08.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gthumb-08.jpg" alt=""></a></div>
-			  <div class="item"><a href="images/gallery/gallery-09.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gthumb-09.jpg" alt=""></a></div>
-			  <div class="item"><a href="images/gallery/gallery-10.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gthumb-10.jpg" alt=""></a></div>
+			  <div class="item"><a href="images/gallery/gallery-01.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-01.jpg" alt=""></a></div>
+			  <div class="item"><a href="images/gallery/gallery-02.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-02.jpg" alt=""></a></div>
+			  <div class="item"><a href="images/gallery/gallery-03.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-03.jpg" alt=""></a></div>
+			  <div class="item"><a href="images/gallery/gallery-04.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-04.jpg" alt=""></a></div>
+			  <div class="item"><a href="images/gallery/gallery-05.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-05.jpg" alt=""></a></div>
+			  <div class="item"><a href="images/gallery/gallery-06.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-06.jpg" alt=""></a></div>
+			  <div class="item"><a href="images/gallery/gallery-07.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-07.jpg" alt=""></a></div>
+			  <div class="item"><a href="images/gallery/gallery-08.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-08.jpg" alt=""></a></div>
+			  <div class="item"><a href="images/gallery/gallery-09.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-09.jpg" alt=""></a></div>
+			  <div class="item"><a href="images/gallery/gallery-10.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-10.jpg" alt=""></a></div>
 			</div>
 
 			<h2 data-scroll-reveal>Vestibulum ante ipsum primis luctus et ultrices</h2>
@@ -229,45 +234,15 @@
 		<!-- Ceremony -->
 		<section id="ceremony">
 			<h1 data-scroll-reveal>Ceremony</h1>
-			<hr>
-
+			
 			<div class="center-container">
-				<h2 data-scroll-reveal>Proin lacinia fermentum diam at dictum</h2>
-				<p data-scroll-reveal>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales lacus ultricies mauris rhoncus, ut tristique quam malesuada. Sed eu sapien id nulla viverra fringilla non a massa. Integer turpis odio, vestibulum id adipiscing dictum, tempor sit amet massa. Nam nec mollis augue.</p>
-				<p data-scroll-reveal><strong>Duis dapibus purus ac metus ullamcorper, vel consequat nibh consectetur. Nam eu euismod libero. Praesent nec odio sed urna sagittis condimentum. Integer ut viverra odio. Integer sed tincidunt tellus. Quisque urna, eu rhoncus lorem tempus in.</strong></p>
-
-				<div class="m-12 ceremony-images">
-					<div class="m-04 remove-2">
-						<div class="m-06 mt-40 remove" data-scroll-reveal="enter left, over 2s, after 0.5s">
-							<img src="images/ceremony-01.jpg" alt="Ceremony" class="round-img">
-						</div>
-
-						<div class="m-06 mt-40" data-scroll-reveal="enter left, over 2s">
-							<img src="images/ceremony-02.jpg" alt="Ceremony" class="round-img">
-						</div>
-					</div>
-
-					<div class="m-04" data-scroll-reveal>
-						<img src="images/ceremony-03.jpg" alt="Ceremony" class="round-img round-img-lgb">
-					</div>
-
-					<div class="m-04 remove-2">
-						<div class="m-06 mt-40" data-scroll-reveal="enter right, over 2s">
-							<img src="images/ceremony-04.jpg" alt="Ceremony" class="round-img">
-						</div>
-
-						<div class="m-06 mt-40 remove" data-scroll-reveal="enter right, over 2s, after 0.5s">
-							<img src="images/ceremony-05.jpg" alt="Ceremony" class="round-img">
-						</div>
-					</div>
-				</div>
-
-				<p data-scroll-reveal>Aliquam erat volutpat. Vestibulum hendrerit leo id rutrum porttitor. Praesent id tellus tellus. Pellentesque convallis, lacus non imperdiet posuere, nibh urna faucibus justo, vel iaculis eros libero quis libero. Proin est augue, cursus ut euismod eu, consequat non urna.</p>
-
-				<hr>
+				<p data-scroll-reveal>
+					The Khatwanis & Thakkars invite you to join us for the wedding ceremony at
+				</p>
+				<p data-scroll-reveal><strong>"Mahal", Hotel Sayaji, Indore ___ pm onwards</strong></p>
 
 				<h2>Location</h2>
-				<p><strong>Millenium Hilton</strong> / 55 Church St / New York, NY 10007</p>
+				<p><strong>Sayaji Hotel</strong> Scheme No.54, Vijay Nagar, Indore, Madhya Pradesh 452010</p>
 			</div>
 
 			<!-- Google Map -->
