--- a/uielements.html
+++ b/uielements.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 
 		<!-- Page Title -->
-		<title>Florence - Responsive Wedding HTML Template</title>
+		<title>Niharika & Ritik's Wedding</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
 		<!-- Favicon -->
@@ -94,13 +94,13 @@
 
 			<!-- Names -->
 			<div class="names-compact center-container clearfix">
-				<div class="m-04 name-1">Kevin</div>
+				<div class="m-04 name-1">Niharika</div>
 				<div class="m-04"><img src="images/main-03-small.jpg" alt="" class="round-img round-img-lgb"><i class="fa fa-heart-o fa-3x"></i></div> 
-				<div class="m-04 name-2">Maria</div>
+				<div class="m-04 name-2">Ritik</div>
 			</div>
 
 			<!-- Wedding Date -->
-			<div class="wedate">Friday <i>-</i> <strong>December 25</strong> <i>-</i> 2015</div>
+			<div class="wedate">Thursday <i>-</i> <strong>February 26</strong> <i>-</i> 2015</div>
 
 		</header>
 		<!-- END HEADER -->
@@ -317,7 +317,7 @@
 		<!-- BEGIN FOOTER -->
 		<footer class="clearfix">
 			<div class="m-12">
-				<p>Information line • 1-800-9639288, E-mail • info@wedding.tmp</p>
+				<p>Information line • +91-913-045-4832, E-mail • ritikkhatwani@aol.in</p>
 
 				<div class="m-12 soc">
 					<a href="#"><i class="fa fa-twitter fa-mid"></i></a>
@@ -330,7 +330,7 @@
 					<a href="#"><i class="fa fa-dribbble fa-mid"></i></a>
 				</div>
 			
-				<span>All Rights Reserved © 2014 | Kevin & Maria Wedding</span>
+				<span>All Rights Reserved © 2014 | Niharika & Ritik's Wedding</span>
 			</div>
 		</footer>
 		<!-- END FOOTER -->
