Updated missing images

--- a/index.html
+++ b/index.html
@@ -154,77 +154,13 @@
 			  <div class="item"><a href="images/gallery/gallery-09.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-09.jpg" alt=""></a></div>
 			  <div class="item"><a href="images/gallery/gallery-10.jpg" data-lightbox="demo-gallery"><img src="images/gallery/thumbs/gallery-10.jpg" alt=""></a></div>
 			</div>
-
-			<h2 data-scroll-reveal>Vestibulum ante ipsum primis luctus et ultrices</h2>
-
-			<p data-scroll-reveal>Integer turpis odio, vestibulum id adipiscing dictum, tempor sit amet massa. Nam nec mollis augue.</p>
-			
-			<!-- Comments -->
-			<div id="comments" class="center-container clearfix">
-				
-				<div class="m-12 mt-20">
-					
-					<!-- Comment 01 -->
-					<div class="m-03" data-scroll-reveal="enter bottom, over 1s">
-						<img src="images/comment-1.jpg" alt="" class="comment-avatar">
-						<h3>Maria Schmidt</h3>
-						<p>Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Vestibulum ante ipsum primis luctus et ultrices posuer.</p>
-
-						<div class="m-12 meta-info clearfix">
-							<span><i class="fa fa-heart fa-mid"></i> Maria</span>
-							<span><i class="fa fa-calendar fa-mid"></i> July 18th, 2015</span>
-						</div>
-
-					</div>
-
-					<!-- Comment 02 -->
-					<div class="m-03" data-scroll-reveal="enter bottom, over 1s, after 0.3s">
-						<img src="images/comment-2.jpg" alt="" class="comment-avatar">
-						<h3>Thomas Edwards</h3>
-						<p>Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Vestibulum ante ipsum primis luctus et ultrices posuer.</p>
-
-						<div class="m-12 meta-info clearfix">
-							<span><i class="fa fa-heart fa-mid"></i> Thomas</span>
-							<span><i class="fa fa-calendar fa-mid"></i> July 18th, 2015</span>
-						</div>
-
-					</div>
-
-					<!-- Comment 03 -->
-					<div class="m-03" data-scroll-reveal="enter bottom, over 1s, after 0.6s">
-						<img src="images/comment-3.jpg" alt="" class="comment-avatar">
-						<h3>Trevor Kaske</h3>
-						<p>Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Vestibulum ante ipsum primis luctus et ultrices posuer.</p>
-
-						<div class="m-12 meta-info clearfix">
-							<span><i class="fa fa-heart fa-mid"></i> Trevor</span>
-							<span><i class="fa fa-calendar fa-mid"></i> July 18th, 2015</span>
-						</div>
-
-					</div>
-
-					<!-- Comment 04 -->
-					<div class="m-03" data-scroll-reveal="enter bottom, over 1s, after 0.9s">
-						<img src="images/comment-4.jpg" alt="" class="comment-avatar">
-						<h3>Rebeca Monde</h3>
-						<p>Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Vestibulum ante ipsum primis luctus et ultrices posuer.</p>
-
-						<div class="m-12 meta-info clearfix">
-							<span><i class="fa fa-heart fa-mid"></i> Rebeca</span>
-							<span><i class="fa fa-calendar fa-mid"></i> July 18th, 2015</span>
-						</div>
-
-					</div>
-				</div>
-
-			</div>
 			
 		</section>
 
 		<!-- Ceremony -->
 		<section id="ceremony">
 			<h1 data-scroll-reveal>Ceremony</h1>
-			
+			<hr>
 			<div class="center-container">
 				<p data-scroll-reveal>
 					The Khatwanis & Thakkars invite you to join us for the wedding ceremony at
@@ -418,7 +354,7 @@
 			
 			<p data-scroll-reveal><i class="fa fa-heart-o fa-1x"></i>&nbsp;Yes, I will gladly attend your wedding ceremony.&nbsp;<i class="fa fa-heart-o fa-1x"></i></p>
 
-			<form id="rsvp-form" action="inc/rsvp-send.php" method="post" data-scroll-reveal>
+			<form id="rsvp-form" action="inc/rsvp-send.php" method="post">
 				<div class="center-container">
 					<div class="m-12">
 						<div class="m-06">
@@ -464,7 +400,7 @@
 		<!-- BEGIN FOOTER -->
 		<footer class="clearfix" data-scroll-reveal>
 			<div class="m-12">
-				<p>Information line • +91-913-045-4832, E-mail • ritikkhatwani@aol.in</p>
+				<p>Information line: +91-913-045-4832, E-mail: ritikkhatwani@aol.in</p>
 
 				<div class="m-12 soc">
 					<a href="#"><i class="fa fa-twitter fa-mid"></i></a>
@@ -477,7 +413,7 @@
 					<a href="#"><i class="fa fa-dribbble fa-mid"></i></a>
 				</div>
 			
-				<span>All Rights Reserved © 2014 | Niharika & Ritik's Wedding</span>
+				<span>All Rights Reserved &copy; 2014 | Niharika & Ritik's Wedding</span>
 			</div>
 		</footer>
 		<!-- END FOOTER -->
